# ketrab2004.github.io

./: .eslintrc.json  .gitignore  404.html  Cargo.toml  README.md  asset-manifest.json  contact.html  craco.config.js  images.config.js  index.html  manifest.json  next-i18next.config.js  next-sitemap.config.js  next.config.js  other-env.d.ts  package-lock.json  package.json  postcss.config.js  projects.html  robots.txt  sitemap-0.xml  sitemap.xml  tailwind.config.js  tsconfig.json  tsconfig.paths.json
.github/workflows/: next.js.yml  node.js.yml
components/: LocalizedLink.tsx  Navbar.tsx  ProjectItem.tsx  Redirect.tsx  Tag.tsx  module.ts
components/layouts/: ProjectsLayout.tsx  module.ts
data/context/: SearchContext.ts  module.ts
data/projects/: IProject.ts  Projects.ts  module.ts
data/search/: ISearchHolder.ts  ISearchInfo.ts  OrderEnum.ts  TagSearchTypeEnum.ts  module.ts
data/tags/: GetTagInfo.ts  ITag.ts  TagTypes.ts  Tags.ts  module.ts
functions/: CapitalizeWords.ts  ColourFromNumber.ts  GetTextColourForBackground.ts  HSLToRGB.ts  applySearch.ts  filterSearchHolders.ts  getLanguageDetector.ts  getStaticLocales.ts  getValuesOfReactSelect.ts  module.ts  orderSearchHolders.ts  sfc32.ts
images/: SkyCircle2.pdn
img/: SkyPerfectCircle.pdn
pages/: 404.tsx  _app.tsx  _document.tsx  contact.tsx  index.tsx
pages/[locale]/: 404.tsx  index.tsx  (+1 more)
projects/: cannibalism-mod.html  cardboard-mod.html  grass-mod.html  html5-hangman.html  roblox-infinite-terrain.html
public/: index.html  manifest.json
src/: App.js  App.jsx  App.tsx  index.js  index.tsx  main.rs
(+83 files in other folders)
